--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/carloslahrssen/ThermalTrackKingApi#readme",
   "dependencies": {
     "express": "^4.16.2",
+    "nodemon": "^1.12.1",
     "socket.io": "^2.0.4"
   }
 }
